--- a/css/donations.css
+++ b/css/donations.css
@@ -25,7 +25,6 @@
 *    SOFTWARE.
 *
 */
-
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
@@ -33,7 +32,7 @@
 /* Show it is fixed to the top */
 body {
     background-color: #212327;
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Roboto', sans-serif;
     padding-bottom: 20px;
     color: #ffffff;
     overflow-x: hidden;
@@ -71,82 +70,81 @@ body {
     background-color: #2D3035 !important;
 }
 
-.card{
+.card {
     background-color: #2D3035;
     color: #ffffff;
     border-color: #303338;
 }
 
-.a{
+.a {
     color: #3D6594;
 }
 
-.list-group-item{
+.list-group-item {
     background-color: #2D3035;
     color: #ffffff;
     border-color: #303338;
 }
 
-h5{
+h5 {
     color: #007BCC;
     font-style: oblique;
 }
 
-@media screen and (max-width: 1100px){
+@media screen and (max-width: 1100px) {
 
-    .pagec{
+    .pagec {
         padding-top: 3%;
     }
 
-    .padonphone{
+    .padonphone {
         margin-top: 2%;
     }
 
-    .statsdiv{
+    .statsdiv {
         display: none;
     }
 
-
 }
 
-@media screen and (min-width: 1100px){
-    .pagec{
+@media screen and (min-width: 1100px) {
+    .pagec {
         padding-top: 3%;
     }
 }
 
-.padbot{
+.padbot {
     margin-bottom: 10px;
 }
 
-.searchcontainer{
+.searchcontainer {
     padding-bottom: 2%;
 }
 
-.fa-database{
+.fa-database {
     color: yellow;
 }
 
-.fa-star{
+.fa-star {
     color: #ff8433;
 }
 
-.table-dark{
+.table-dark {
     background-color: #2D3035 !important;
 }
 
-.cardstatborder{
+.cardstatborder {
     border-right: 2px solid #2D3035
 }
 
 .modal-content {
     background-color: #2D3035;
     background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.2);
+    border: 1px solid rgba(0, 0, 0, .2);
     color: white;
 }
 
-.modal-body b{
+.modal-body b {
     color: #007BCC;
 }
 
@@ -176,28 +174,34 @@ span.load {
     margin-left: -0.35em;
     transform: translateX(10em);
 }
+
 span.load:nth-child(1) {
     animation-delay: 0.16667s;
 }
+
 span.load:nth-child(2) {
     animation-delay: 0.33333s;
 }
+
 span.load:nth-child(3) {
     animation-delay: 0.5s;
 }
+
 span.load:nth-child(4) {
     animation-delay: 0.66667s;
 }
+
 span.load:nth-child(5) {
     animation-delay: 0.83333s;
 }
+
 span.load:nth-child(6) {
     animation-delay: 1s;
 }
+
 span.load:nth-child(7) {
     animation-delay: 1.16667s;
 }
-
 
 @keyframes animateIn {
     0% {
@@ -216,41 +220,48 @@ span.load:nth-child(7) {
 
 /* Donation style */
 
-#pricing{
+#pricing {
     width: 989px;
     margin: 3% auto;
     font-family: 'Open Sans', Helvetica, serif;
 }
 
-.price_card{
+.price_card {
     width: 300px;
     background: rgb(255, 255, 255);
     display: inline-table;
     top: 0;
 }
-.price_card:not(:last-child){
+
+.price_card:not(:last-child) {
     margin-right: 40px;
 }
-.header{
+
+.header {
     color: rgb(255, 255, 255);
 }
-.alpha{
+
+.alpha {
     background: #c8c859 !important;
     color: #4c5156 !important;
 }
-.bravo{
+
+.bravo {
     background: #ffff66 !important;
     color: #4c5156 !important;
 }
-.charlie{
+
+.charlie {
     background: #ffff00 !important;
     color: #4c5156 !important;
 }
-.delta{
+
+.delta {
     background: #81d8d0 !important;
     color: #4c5156 !important;
 }
-.price{
+
+.price {
     width: 100%;
     font-size: 60px;
     font-weight: 300;
@@ -258,7 +269,8 @@ span.load:nth-child(7) {
     text-align: center;
     padding: 5px 0 5px;
 }
-.name{
+
+.name {
     width: 100%;
     font-size: 15px;
     font-weight: 700;
@@ -266,7 +278,8 @@ span.load:nth-child(7) {
     text-align: center;
     padding: 0 0 0;
 }
-.features{
+
+.features {
     list-style: none;
     text-align: center;
     color: rgb(138, 138, 138);
@@ -274,51 +287,80 @@ span.load:nth-child(7) {
     margin: 0;
     padding: 0;
 }
-.features li{
+
+.features li {
     margin: 0 35px;
     padding: 10px 15px;
     width: auto;
 }
-.features li:not(:last-child){
+
+.features li:not(:last-child) {
     border: 0 solid rgb(242, 242, 242);
     border-bottom-width: 1px;
 }
 
-.alpha button{
+.alpha button {
     background: #c8c859 !important;
     color: #4c5156 !important;
 }
-.bravo button{
+
+.bravo button {
     background: #ffff66 !important;
     color: #4c5156 !important;
 }
-.charlie button{
+
+.charlie button {
     background: #ffff00 !important;
     color: #4c5156 !important;
 }
-.delta button{
+
+.delta button {
     background: #81d8d0 !important;
     color: #4c5156 !important;
 }
-.tip{
+
+.tip {
     font-family: 'Indie Flower', serif;
     position: absolute;
     color: rgb(117, 117, 117);
     margin: 10px 5px;
 }
 
-.centered{
+.centered {
     text-align: center;
 }
 
-.fa-heart{
+.fa-heart {
     color: #B22222;
 }
 
-a.donate-link{
+a.donate-link {
     color: #4889c3;
 }
 
-a.donate-link:hover{
+a.donate-link:hover {
     color: #c3ba25;
+}
+
+.vehicle {
+    background: url("http://www.armaholic.com/datas/users/itqv8uwqqtwhv_4.jpg") no-repeat no-repeat;
+    background-size: cover;
+}
+
+.heli {
+    background-image: url("http://www.armaholic.com/datas/users/un-units-2030-v10-7_4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.outfits {
+    background-image: url("http://i.imgur.com/3zAKIhp.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.allpack {
+    background-image: url("http://www.armaholic.com/datas/users/itqv8uwqqtwhv_4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
