--- a/pages/homepage/css/page.css
+++ b/pages/homepage/css/page.css
@@ -7,7 +7,8 @@
 body {
     padding-top: 3rem;
     padding-bottom: 3rem;
-    color: #5a5a5a;
+    background-color: #212327;
+    color: #ffffff;
     font-family: 'Arial', sans-serif;
 }
 
@@ -15,7 +16,19 @@ nav{
     font-family: 'Work Sans', sans-serif;
     font-size: x-large;
     font-weight: bold;
-    background: linear-gradient(141deg, #2f2f33 0%, #2f2f33 51%, #2b2b2f 75%);
+    background: linear-gradient(141deg, #2D3035 0%, #2D3035 51%, #212327 75%);
+}
+
+.worksans{
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.wstitle{
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bold;
+    text-transform: capitalize;
 }
 
 /* Carousel base class */
@@ -91,6 +104,12 @@ nav{
     left: 5px;
 }
 
+.card{
+    border-color: #2b2b2f;
+    background-color: #2D3035;
+    color: #ffffff;
+}
+
 /* SOCIAL ICON
 -------------------------------------------------- */
 
@@ -114,7 +133,6 @@ nav{
     width: 100%;
     height: 130%;
     border: 0;
-    background-color: #ffffff;
     background-size: 70%;
     background-repeat: no-repeat;
     background-position: center center;
@@ -122,7 +140,6 @@ nav{
     transition: all .2s ease-out;
 }
 .aliricon a:hover {
-    background-color: #ffffff;
     background-size: 0;
     -webkit-transition: all .2s ease-out;
     transition: all .2s ease-out;
