--- a/pages/homepage/css/page.css
+++ b/pages/homepage/css/page.css
@@ -145,7 +145,7 @@ nav{
     transition: all .2s ease-out;
 }
 
-.aliricon__name {
+.aliricon-name {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -162,7 +162,7 @@ nav{
     transform: translateZ(0);
     will-change: transform;
 }
-.aliricon:hover .aliricon__name {
+.aliricon:hover .aliricon-name {
     -webkit-transition: all .3s ease-out;
     transition: all .3s ease-out;
     opacity: 1;
