--- a/pages/homepage/css/page.css
+++ b/pages/homepage/css/page.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans|Indie+Flower');
 
 /* GLOBAL STYLES
 -------------------------------------------------- */
@@ -19,6 +19,10 @@ nav{
     background: linear-gradient(141deg, #2D3035 0%, #2D3035 51%, #212327 75%);
 }
 
+a{
+    color: #f8f9fa;
+}
+
 .worksans{
     font-family: 'Work Sans', sans-serif;
     font-weight: bold;
@@ -29,6 +33,13 @@ nav{
     font-family: 'Work Sans', sans-serif;
     font-weight: bold;
     text-transform: capitalize;
+}
+
+.tip {
+    font-family: 'Indie Flower', serif;
+    position: absolute;
+    color: rgb(117, 117, 117);
+    margin: 10px 5px;
 }
 
 /* Carousel base class */
@@ -106,10 +117,21 @@ nav{
 
 .card{
     border-color: #2b2b2f;
-    background-color: #2D3035;
+    background-color: #2d3035;
     color: #ffffff;
 }
 
+.modal-content{
+    border-color: #2b2b2f;
+    background-color: #2d3035;
+    color: #ffffff;
+}
+
+.list-group-item{
+    border-color: #2b2b2f;
+    background-color: #2d3035;
+    color: #ffffff;
+}
 /* SOCIAL ICON
 -------------------------------------------------- */
 
@@ -181,4 +203,10 @@ nav{
 }
 .aliricon-youtube a {
     background-image: url("https://www.alir.eu/etero/social/youtube.svg");
+}
+
+.slide{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
