--- a/pages/homepage/css/page.css
+++ b/pages/homepage/css/page.css
@@ -210,3 +210,13 @@ a{
     background-repeat: no-repeat;
     background-position: 50% 50%;
 }
+
+#alirserver:hover{
+    cursor: pointer;
+    border-color: #007BFF;
+    box-shadow: 0 2px 1px rgba(0,123,255,0.7);
+}
+
+#tsserver:hover{
+    cursor: not-allowed;
+}
