--- a/pages/homepage/css/page.css
+++ b/pages/homepage/css/page.css
@@ -199,10 +199,10 @@ a{
     background-image: url("https://alir.eu/etero/social/twitter.svg");
 }
 .aliricon-telegram a {
-    background-image: url("https://www.alir.eu/etero/social/telegram.svg");
+    background-image: url("https://alir.eu/etero/social/telegram.svg");
 }
 .aliricon-youtube a {
-    background-image: url("https://www.alir.eu/etero/social/youtube.svg");
+    background-image: url("https://alir.eu/etero/social/youtube.svg");
 }
 
 .slide{
