--- a/pages/homepage/css/page.css
+++ b/pages/homepage/css/page.css
@@ -9,14 +9,14 @@ body {
     padding-bottom: 3rem;
     color: #ffffff;
     font-family: 'Exo', sans-serif;
-    background: url("https://daks2k3a4ib2z.cloudfront.net/58f22ec2d5fc681355abc7eb/58f51f58f635b6783866f643_default.jpg") repeat-y fixed center top;
+    background: url("https://www.alir.eu/etero/sectionImages/homepage/arma_def.jpg") repeat-y fixed center top;
 }
 
 nav{
     font-family: 'Exo', sans-serif;
     font-size: xx-large;
     font-weight: bold;
-    background: url("https://daks2k3a4ib2z.cloudfront.net/58f22ec2d5fc681355abc7eb/58f51f58f635b6783866f643_default.jpg") repeat-y fixed center top;
+    background: url("https://www.alir.eu/etero/sectionImages/homepage/arma_def.jpg") repeat-y fixed center top;
     border-bottom: 1px solid #4d5055;
 }
 
