pv and post fix

--- a/pages/forums/custom.css
+++ b/pages/forums/custom.css
@@ -43,16 +43,20 @@
     border: 1px solid #000 !important;
 }
 
-.ipsWidget_title, .ipsType_sectionTitle {
+.ipsWidget_title, .ipsType_sectionTitle, .ipsComment_header{
     background-color: rgba(0, 0, 0, .35) !important;
 }
 
-.ipsWidget_inner {
+.ipsWidget_inner, .ipsComment, .ipsAreaBackground {
     background-color: hsla(0, 0%, 100%, .08) !important;
 }
 
+.ipsType_pageTitle, .ipsType_sectionTitle, .ipsType_secondaryTitle, .ipsType_sectionHead, .ipsType_minorHeading{
+    font-family: "Exo", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+}
+
 .ipsBox, .ipsDialog > div, .ipsStreamItem.ipsStreamItem_contentBlock, .ipsMemberCard, #elUserSignIn_external .ipsAreaBackground_light, .ipsReact_reactCount, .ipsDataItem.cForumGrid, .ipsCalendarDate, .eventStreamDate .ipsCalendarDate, .ipsRichEmbed .ipsCalendarDate, div#elTabBar, #elLeaderboardContent, #elLeaderboardContent section.ipsSpacer_top, .cPopularItem, .cStaffDirectory_full, .cStaffDirectory .ipsGrid > div, .cGalleryCat, .cNexusCategoryBlock, #elClubHeader, #elMyClubsActivity .ipsStreamItem.ipsStreamItem_contentBlock, #elGalleryHeader, #elGalleryImage {
-    background-color: hsla(0, 0%, 100%, .08) !important;
+    background-color: hsla(0, 0%, 35%, .08) !important;
     box-shadow: 0 0 6px -1px #000 !important;
     border-radius: 0 !important;
 }
@@ -82,4 +86,35 @@
 .cPayment,
 .cRatingColumn_on {
     background-color: hsla(0, 0%, 82%, 0.31) !important;
+}
+
+.ipsComment_highlighted.ipsBox:not(.ipsBox_transparent):not(.ipsModerated):not(.ipsComment_selected):not(.ipsComment_popular), .ipsComment_highlighted:not(.ipsBox_transparent):not(.ipsModerated):not(.ipsComment_selected):not(.ipsComment_popular) .ipsAreaBackground_reset{
+    background-color: hsla(0, 0%, 100%, .08) !important;
+}
+
+.cPost.ipsComment_highlighted .ipsComment_content{
+    background-color: hsla(358, 56%, 51%, 0.08) !important;
+}
+
+.ipsComment_highlighted:not(.ipsBox_transparent):not(.ipsModerated):not(.ipsComment_selected):not(.ipsComment_popular){
+    box-shadow: 0 0 6px -1px #c83e42 !important;
+    border: 1px solid #c83e42 !important;
+}
+
+.ipsComment_content{
+    height: 100% !important;
+}
+
+footer{
+    padding-top: 1% !important;
+}
+
+#ipsLayout_footer{
+    background: none !important;
+}
+
+.ta-Footer{
+    background-color: hsla(0, 0%, 2%, 0.31) !important;
+    border-top: 1px solid #000 !important;
+    border-bottom: 1px solid #000 !important;
 }
