--- a/pages/forums/custom.css
+++ b/pages/forums/custom.css
@@ -131,3 +131,7 @@ footer {
     border: 1px solid #000 !important;
     color: #f8f9fa !important;
 }
+
+.SG_record_right_with_image h1 {
+    color: #f8f9fa !important;
+}
