--- a/pages/forums/custom.css
+++ b/pages/forums/custom.css
@@ -139,6 +139,11 @@ footer {
 .ipsDialog, .ipsDialog_title, .ipsDialog_content{
     background-color: rgba(0, 0, 0, 0.048) !important;
 }
+
+.ipsPip{
+    display: none !important;
+}
+
 .ipsMessage_warning{
     background-color: rgba(240, 154, 57, 0.747) !important;
 }
