--- a/pages/forums/custom.css
+++ b/pages/forums/custom.css
@@ -153,3 +153,7 @@ footer {
 .ipsMessage_warning{
     background-color: rgba(240, 154, 57, 0.747) !important;
 }
+
+div.ipsList_reset{
+    background-color: rgba(0, 0, 0, 0.048) !important;
+}
